# neuro-mesh

./: .gitignore  Cargo.toml  ISSUES.md  README.md  SECURITY.md  foundry.toml
.github/workflows/: ci.yml  unzip.yml
docs/: CONTRIBUTING.md  architecture.md  backlog.md
docs/issues/: ISSUE-1.md
scripts/: docker-compose.yml  run_tests.sh
src/aggregator/: Dockerfile  jest.config.js  package.json
src/aggregator/src/: index.ts
src/aggregator/tests/: index.test.ts
src/chain/: Cargo.toml  README.md
src/chain/pallets/subnet-registry/: Cargo.toml  IMPLEMENTATION.md  README.md  lib.rs
src/chain/primitives/sp-neuro-core/: Cargo.toml
src/chain/primitives/sp-neuro-core/src/: lib.rs
src/chain/src/: lib.rs  runtime.rs
src/chain/src/pallets/: mod.rs
src/miner/: Dockerfile  README.md  miner.py  requirements.txt
src/miner/tests/: test_miner.py
src/node/: Cargo.toml  README.md
src/node/src/: lib.rs
src/sdk/python/: requirements.txt
src/sdk/python/neurochain_sdk/: __init__.py  client.py
src/sdk/python/neurochain_sdk/tests/: test_client.py
src/sdk/rust/: Cargo.toml
src/sdk/rust/src/: client.rs  lib.rs
src/sdk/rust/tests/: sdk_tests.rs
src/validator/: README.md  requirements.txt  validator.py
src/validator/tests/: test_validator.py
